objects/UNITY_DocParser_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parse_URL__c</fullName>
        <label>Parse URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parser_ID__c</fullName>
        <label>Parser ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_URL__c</fullName>
        <label>Upload URL</label>
        <type>Url</type>
    </fields>
    <label>UNITY_DocParser_Settings</label>
</CustomObject>